# STM32EmbeddedBringup

./: .gitignore  CMakeLists.txt
app/include/: button_exti.h  gpio.h  ring_buffer.h  system_clock.h  system_stm32f4xx.h  systick.h  uart.h
app/src/: main.c
app/src/core/: system_clock.c  systick.c
app/src/drivers/: button_exti.c  gpio.c  ring_buffer.c  uart.c
app/startup/: startup_stm32f446xx.s
cmake/: arm-none-eabi-toolchain.cmake
linker/: stm32f446re.ld
